--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   },
   "name": "airbnb",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "description": "",
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.16.1",
     "bootstrap": "^5.3.3",
-    "cloudinary": "^2.5.1",
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^5.1.0",
     "cookie-parser": "^1.4.7",
@@ -23,12 +24,11 @@
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^4.21.2",
-    "express-flash": "^0.0.2",
     "express-session": "^1.18.1",
     "flash": "^1.1.0",
+    "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
-    "mongodb": "^6.11.0",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
