--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "helmet": "^8.1.0",
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
+    "mongodb": "^6.19.0",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
     "multer-storage-cloudinary": "^4.0.0",
